Penambahan channel ke vlink

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+#Sting port setting
 server.port = 8080
-jwt.secret=dans5200@gmail.com
 
-#spring.datasource.url=jdbc:mysql://localhost:3306/mlpt_merchant?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#Database setting
 spring.datasource.url=jdbc:mysql://localhost:3306/mlpt_merchant
 spring.datasource.username=root
 spring.datasource.password=
@@ -9,3 +9,6 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
+
+#VlinkChannel setting
+vlink.timeout=10000
