Penambahan API TrxLog untuk melihat semua transaksi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,8 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+#Paginate setting
+number.of.show.data=10
+
 #VlinkChannel setting
 vlink.timeout=10000
