Setting message ke vlink untuk payment, refund, register MPAN

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,22 @@ spring.jpa.database-platform = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 
+#Swegger Config
+api.version=1.0
+swagger.enabled=true
+swagger.title=Merchant Management
+swagger.description=
+swagger.useDefaultResponseMessages=false
+swagger.enableUrlTemplating=false
+swagger.deepLinking=true
+swagger.defaultModelsExpandDepth=1
+swagger.defaultModelExpandDepth=1
+swagger.displayOperationId=false
+swagger.displayRequestDuration=false
+swagger.filter=false
+swagger.maxDisplayedTags=0
+swagger.showExtensions=false;
+
 #Paginate setting
 number.of.show.data=10
 
