--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ bootWar(){
 
 repositories {
 	mavenCentral()
+	mavenLocal()
 	maven { url "https://repo.maven.apache.org/maven2" }
 	maven { url "http://maven.springframework.org/release" }
 	maven { url "http://repository.jboss.org/nexus/content/groups/public-jboss" }
